--- a/app/src/main/res/layout/layout_message_details_actions_sheet_buttons.xml
+++ b/app/src/main/res/layout/layout_message_details_actions_sheet_buttons.xml
@@ -40,7 +40,7 @@
         android:textAppearance="@style/Text.Default"
         android:textColor="@color/cornflower_blue"
         app:drawableTint="@color/cornflower_blue"
-        app:drawableTopCompat="@drawable/ic_reply_24dp"
+        app:drawableTopCompat="@drawable/ic_reply"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/text_view_details_actions_reply_all"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +62,7 @@
         android:textAppearance="@style/Text.Default"
         android:textColor="@color/cornflower_blue"
         app:drawableTint="@color/cornflower_blue"
-        app:drawableTopCompat="@drawable/ic_reply_all_24dp"
+        app:drawableTopCompat="@drawable/ic_reply_all"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/text_view_details_actions_forward"
         app:layout_constraintStart_toEndOf="@+id/text_view_details_actions_reply"
@@ -84,7 +84,7 @@
         android:textAppearance="@style/Text.Default"
         android:textColor="@color/cornflower_blue"
         app:drawableTint="@color/cornflower_blue"
-        app:drawableTopCompat="@drawable/ic_forward_24dp"
+        app:drawableTopCompat="@drawable/ic_forward"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/text_view_details_actions_reply_all"
