--- a/app/src/main/res/drawable/ic_compose.xml
+++ b/app/src/main/res/drawable/ic_compose.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
@@ -18,9 +17,13 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/interaction_strong_pressed">
-
-    <item android:drawable="@drawable/circle_background_interaction_strong" />
-
-</ripple>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="16"
+    android:viewportHeight="16">
+    <path
+        android:fillColor="@color/icon_norm"
+        android:fillType="evenOdd"
+        android:pathData="M15.3093,4.3435L12.8481,1.8799L7.1472,7.5943L6.7867,10.4187L9.6086,10.0577L15.3093,4.3435ZM8.1239,8.0737L12.8486,3.3377L13.8539,4.344L9.1289,9.0802L7.9766,9.2276L8.1239,8.0737ZM9.2558,2.427H2V14.1237H13.6967V8.7198H12.6667V13.0937H3.03V3.457H9.2558V2.427Z" />
+</vector>
