--- a/app/src/main/res/layout/layout_bottom_actions.xml
+++ b/app/src/main/res/layout/layout_bottom_actions.xml
@@ -33,7 +33,7 @@
         app:layout_constraintRight_toLeftOf="@id/secondActionImageButton"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/ripple_message_details_actions"
+        android:background="?selectableItemBackgroundBorderless"
         android:src="@drawable/ic_reply"
         app:tint="@color/icon_inverted" />
 
@@ -45,7 +45,7 @@
         app:layout_constraintRight_toLeftOf="@id/thirdActionImageButton"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/ripple_message_details_actions"
+        android:background="?selectableItemBackgroundBorderless"
         android:src="@drawable/ic_envelope_dot"
         app:tint="@color/icon_inverted" />
 
@@ -57,7 +57,7 @@
         app:layout_constraintRight_toLeftOf="@id/fourthActionImageButton"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/ripple_message_details_actions"
+        android:background="?selectableItemBackgroundBorderless"
         android:src="@drawable/ic_trash"
         app:tint="@color/icon_inverted" />
 
@@ -81,7 +81,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/ripple_message_details_actions"
+        android:background="?selectableItemBackgroundBorderless"
         android:src="@drawable/ic_three_dots_horizontal"
         app:tint="@color/icon_inverted" />
 
