Replace styles Text.~ with Proton.Text.~

--- a/app/src/main/res/layout/activity_mailbox.xml
+++ b/app/src/main/res/layout/activity_mailbox.xml
@@ -97,7 +97,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="@string/no_messages"
-                    style="@style/Text.Caption.Hint" />
+                    style="@style/Proton.Text.Caption.Hint" />
 
             </ScrollView>
 
