--- a/app/src/main/res/layout/layout_message_details_attachments.xml
+++ b/app/src/main/res/layout/layout_message_details_attachments.xml
@@ -34,7 +34,7 @@
         app:layout_constraintRight_toLeftOf="@id/rightChevronImageView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:textAppearance="@style/Text.DefaultSmall"
+        android:textAppearance="@style/Proton.Text.DefaultSmall"
         app:drawableStartCompat="@drawable/ic_attachment"
         android:drawablePadding="@dimen/message_details_banner_drawable_padding"
         android:gravity="center_vertical"
