--- a/app/src/main/res/layout/layout_message_details_expiration_info.xml
+++ b/app/src/main/res/layout/layout_message_details_expiration_info.xml
@@ -35,7 +35,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:textAppearance="@style/Text.DefaultSmall.Medium"
+        android:textAppearance="@style/Proton.Text.DefaultSmall.Medium"
         app:drawableStartCompat="@drawable/ic_hourglass"
         android:drawablePadding="@dimen/message_details_banner_drawable_padding"
         android:gravity="center_vertical"
