--- a/app/src/main/res/drawable/ic_arrow_left.xml
+++ b/app/src/main/res/drawable/ic_arrow_left.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
@@ -18,18 +17,13 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/toolbar_action_layout_size"
-    android:layout_height="@dimen/toolbar_action_layout_size">
-
-    <ImageButton
-        android:id="@+id/searchImageButton"
-        android:layout_width="@dimen/button_nav_size"
-        android:layout_height="@dimen/button_nav_size"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_search"
-        android:background="@drawable/selector_circle_background_interaction_weak"
-        android:contentDescription="@string/x_search" />
-
-</FrameLayout>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M20.9999,11.9998H4.8149L11.5349,5.2798L10.4699,4.2148L1.9349,12.7498L10.4699,21.2848L11.5349,20.2198L4.8149,13.4998H20.9999V11.9998Z"
+      android:fillColor="#17181C"
+      android:fillType="evenOdd"/>
+</vector>
