--- a/app/src/main/res/menu/mailbox_options_menu.xml
+++ b/app/src/main/res/menu/mailbox_options_menu.xml
@@ -24,7 +24,7 @@
 
     <item
         android:id="@+id/search"
-        android:title="@string/search"
+        android:title="@string/x_search"
         app:actionLayout="@layout/layout_search_action"
         app:showAsAction="ifRoom" />
 
