Fix styles.xml after rebase

--- a/app/src/main/res/drawable/bg_drawer_header.xml
+++ b/app/src/main/res/drawable/bg_drawer_header.xml
@@ -23,7 +23,8 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="8dp"/>
-            <solid android:color="@color/nav_view_divider" />
+            <!-- TODO color reference -->
+            <solid android:color="@color/abbey" />
         </shape>
     </item>
 </ripple>
