--- a/app/src/main/res/layout/drawer_section_name_item.xml
+++ b/app/src/main/res/layout/drawer_section_name_item.xml
@@ -30,7 +30,7 @@
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/App.TextAppearance.Caption"
+        android:textAppearance="@style/Text.Caption"
         android:textColor="@color/text_weak"
         tools:text="Folders"
         app:layout_constraintTop_toTopOf="parent"
