--- a/app/src/main/res/layout/layout_drawer_header.xml
+++ b/app/src/main/res/layout/layout_drawer_header.xml
@@ -36,7 +36,7 @@
         android:layout_margin="@dimen/margin_drawer_header_initials"
         android:background="@drawable/bg_drawer_header_initials"
         android:gravity="center"
-        android:textAppearance="@style/ProtonNavigationViewItemTextAppearance"
+        android:textAppearance="@style/Text.DefaultSmall"
         android:textColor="@color/text_inverted"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1"
@@ -49,7 +49,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/padding_l"
-        android:textAppearance="@style/ProtonNavigationViewItemTextAppearance"
+        android:textAppearance="@style/Text.DefaultSmall"
         android:textColor="@color/text_inverted"
         app:layout_constraintBottom_toTopOf="@+id/drawer_header_email"
         app:layout_constraintEnd_toStartOf="@id/drawer_header_chevron"
@@ -64,7 +64,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/padding_l"
-        android:textAppearance="@style/App.TextAppearance.Caption"
+        android:textAppearance="@style/Text.Caption"
         android:textColor="@color/text_weak"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/drawer_header_chevron"
