Added details action sheet layout.
MAILAND-1401

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,6 +22,11 @@
     <!-- region V4 -->
 
     <!-- generic size -->
+    <dimen name="space_s">4dp</dimen>
+    <dimen name="space_m">8dp</dimen>
+    <dimen name="space_l">16dp</dimen>
+    <dimen name="space_xl">24dp</dimen>
+    <dimen name="space_xxl">40dp</dimen>
     <dimen name="size_icon_m">24dp</dimen>
     <dimen name="divider_size">2px</dimen>
 
