--- a/app/src/main/res/layout/layout_message_details_actions_sheet_buttons.xml
+++ b/app/src/main/res/layout/layout_message_details_actions_sheet_buttons.xml
@@ -21,8 +21,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/space_l"
-    android:layout_marginBottom="@dimen/space_l">
+    android:layout_marginTop="@dimen/padding_l"
+    android:layout_marginBottom="@dimen/padding_l">
 
     <TextView
         android:id="@+id/detailsActionsReplyTextView"
@@ -30,10 +30,10 @@
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
         android:clickable="true"
-        android:drawablePadding="@dimen/space_l"
+        android:drawablePadding="@dimen/padding_l"
         android:focusable="true"
         android:gravity="center"
-        android:padding="@dimen/space_l"
+        android:padding="@dimen/padding_l"
         android:text="@string/reply"
         android:textAppearance="@style/Text.Default"
         android:textColor="@color/cornflower_blue"
@@ -49,10 +49,10 @@
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
         android:clickable="true"
-        android:drawablePadding="@dimen/space_l"
+        android:drawablePadding="@dimen/padding_l"
         android:focusable="true"
         android:gravity="center"
-        android:padding="@dimen/space_l"
+        android:padding="@dimen/padding_l"
         android:text="@string/reply_all"
         android:textAppearance="@style/Text.Default"
         android:textColor="@color/cornflower_blue"
@@ -66,7 +66,7 @@
         android:id="@+id/separatorHorizontalLeft"
         style="@style/ViewSeparatorHorizontal"
         android:layout_width="0dp"
-        android:layout_margin="@dimen/space_l"
+        android:layout_margin="@dimen/padding_l"
         app:layout_constraintBottom_toTopOf="@+id/detailsActionsForwardTextView"
         app:layout_constraintEnd_toStartOf="@+id/separatorHorizontalRight"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +76,7 @@
         android:id="@+id/separatorHorizontalRight"
         style="@style/ViewSeparatorHorizontal"
         android:layout_width="0dp"
-        android:layout_margin="@dimen/space_l"
+        android:layout_margin="@dimen/padding_l"
         app:layout_constraintBottom_toTopOf="@+id/detailsActionsMarkAsUnreadTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/separatorHorizontalLeft"
@@ -88,10 +88,10 @@
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
         android:clickable="true"
-        android:drawablePadding="@dimen/space_l"
+        android:drawablePadding="@dimen/padding_l"
         android:focusable="true"
         android:gravity="center"
-        android:padding="@dimen/space_l"
+        android:padding="@dimen/padding_l"
         android:text="@string/forward"
         android:textAppearance="@style/Text.Default"
         android:textColor="@color/cornflower_blue"
@@ -107,10 +107,10 @@
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
         android:clickable="true"
-        android:drawablePadding="@dimen/space_l"
+        android:drawablePadding="@dimen/padding_l"
         android:focusable="true"
         android:gravity="center"
-        android:padding="@dimen/space_l"
+        android:padding="@dimen/padding_l"
         android:text="@string/mark_unread"
         android:textAppearance="@style/Text.Default"
         android:textColor="@color/cornflower_blue"
@@ -123,7 +123,7 @@
     <View
         android:id="@+id/separatorVerticalTop"
         style="@style/ViewSeparatorVertical"
-        android:layout_margin="@dimen/space_l"
+        android:layout_margin="@dimen/padding_l"
         app:layout_constraintBottom_toTopOf="@+id/separatorVerticalBottom"
         app:layout_constraintEnd_toStartOf="@+id/detailsActionsReplyAllTextView"
         app:layout_constraintStart_toEndOf="@+id/detailsActionsReplyTextView"
@@ -132,7 +132,7 @@
     <View
         android:id="@+id/separatorVerticalBottom"
         style="@style/ViewSeparatorVertical"
-        android:layout_margin="@dimen/space_l"
+        android:layout_margin="@dimen/padding_l"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/detailsActionsMarkAsUnreadTextView"
