--- a/app/src/main/res/layout/layout_message_details_actions_sheet_buttons.xml
+++ b/app/src/main/res/layout/layout_message_details_actions_sheet_buttons.xml
@@ -21,16 +21,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/padding_l"
-    android:layout_marginBottom="@dimen/padding_l">
+    android:layout_margin="@dimen/padding_m">
 
     <TextView
         android:id="@+id/text_view_details_actions_reply"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="?selectableItemBackground"
+        android:layout_margin="@dimen/padding_m"
+        android:background="@drawable/shape_background_action_sheet_buttons"
         android:clickable="true"
         android:drawablePadding="@dimen/padding_l"
+        android:elevation="@dimen/elevation_s"
         android:focusable="true"
         android:gravity="center"
         android:padding="@dimen/padding_l"
@@ -39,6 +40,7 @@
         android:textColor="@color/cornflower_blue"
         app:drawableTint="@color/cornflower_blue"
         app:drawableTopCompat="@drawable/ic_reply_24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/text_view_details_actions_reply_all"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -47,9 +49,11 @@
         android:id="@+id/text_view_details_actions_reply_all"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="?selectableItemBackground"
+        android:layout_margin="@dimen/padding_m"
+        android:background="@drawable/shape_background_action_sheet_buttons"
         android:clickable="true"
         android:drawablePadding="@dimen/padding_l"
+        android:elevation="@dimen/elevation_s"
         android:focusable="true"
         android:gravity="center"
         android:padding="@dimen/padding_l"
@@ -58,37 +62,20 @@
         android:textColor="@color/cornflower_blue"
         app:drawableTint="@color/cornflower_blue"
         app:drawableTopCompat="@drawable/ic_reply_all_24dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/text_view_details_actions_forward"
         app:layout_constraintStart_toEndOf="@+id/text_view_details_actions_reply"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/separator_horizontal_left"
-        style="@style/ViewSeparatorHorizontal"
-        android:layout_width="0dp"
-        android:layout_margin="@dimen/padding_l"
-        app:layout_constraintBottom_toTopOf="@+id/text_view_details_actions_forward"
-        app:layout_constraintEnd_toStartOf="@+id/separator_horizontal_right"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_view_details_actions_reply" />
-
-    <View
-        android:id="@+id/separator_horizontal_right"
-        style="@style/ViewSeparatorHorizontal"
-        android:layout_width="0dp"
-        android:layout_margin="@dimen/padding_l"
-        app:layout_constraintBottom_toTopOf="@+id/text_view_details_actions_mark_as_unread"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/separator_horizontal_left"
-        app:layout_constraintTop_toBottomOf="@+id/text_view_details_actions_reply_all" />
 
     <TextView
         android:id="@+id/text_view_details_actions_forward"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="?selectableItemBackground"
+        android:layout_margin="@dimen/padding_m"
+        android:background="@drawable/shape_background_action_sheet_buttons"
         android:clickable="true"
         android:drawablePadding="@dimen/padding_l"
+        android:elevation="@dimen/elevation_s"
         android:focusable="true"
         android:gravity="center"
         android:padding="@dimen/padding_l"
@@ -97,47 +84,9 @@
         android:textColor="@color/cornflower_blue"
         app:drawableTint="@color/cornflower_blue"
         app:drawableTopCompat="@drawable/ic_forward_24dp"
-        app:layout_constraintEnd_toStartOf="@+id/text_view_details_actions_mark_as_unread"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_view_details_actions_reply" />
-
-    <TextView
-        android:id="@+id/text_view_details_actions_mark_as_unread"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="?selectableItemBackground"
-        android:clickable="true"
-        android:drawablePadding="@dimen/padding_l"
-        android:focusable="true"
-        android:gravity="center"
-        android:padding="@dimen/padding_l"
-        android:text="@string/mark_unread"
-        android:textAppearance="@style/Text.Default"
-        android:textColor="@color/cornflower_blue"
-        app:drawableTint="@color/cornflower_blue"
-        app:drawableTopCompat="@drawable/ic_envelope_dot"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/text_view_details_actions_forward"
-        app:layout_constraintTop_toBottomOf="@id/text_view_details_actions_reply_all" />
-
-    <View
-        android:id="@+id/separator_vertical_top"
-        style="@style/ViewSeparatorVertical"
-        android:layout_margin="@dimen/padding_l"
-        app:layout_constraintBottom_toTopOf="@+id/separator_vertical_bottom"
-        app:layout_constraintEnd_toStartOf="@+id/text_view_details_actions_reply_all"
-        app:layout_constraintStart_toEndOf="@+id/text_view_details_actions_reply"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/separator_vertical_bottom"
-        style="@style/ViewSeparatorVertical"
-        android:layout_margin="@dimen/padding_l"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/text_view_details_actions_mark_as_unread"
-        app:layout_constraintStart_toEndOf="@+id/text_view_details_actions_forward"
-        app:layout_constraintTop_toBottomOf="@+id/separator_vertical_top" />
-
+        app:layout_constraintStart_toEndOf="@+id/text_view_details_actions_reply_all"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
