--- a/app/src/main/res/layout/message_list_item_swipe_trash.xml
+++ b/app/src/main/res/layout/message_list_item_swipe_trash.xml
@@ -25,7 +25,7 @@
               android:orientation="horizontal">
 
     <ImageView
-        android:id="@+id/drawer_item_icon"
+        android:id="@+id/drawer_item_icon_view"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:src="@drawable/trash"
